--- a/js/dashboard/package.json
+++ b/js/dashboard/package.json
@@ -21,6 +21,9 @@
     "qasir": "^0.2.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
@@ -37,6 +40,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^25.1.0",
     "postcss-preset-env": "^6.7.0",
-    "react-test-renderer": "^16.12.0"
+    "react-test-renderer": "^16.12.0",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
