--- a/js/mobile/.babelrc
+++ b/js/mobile/.babelrc
@@ -5,19 +5,9 @@
     [
       "import",
       {
-        "libraryName": "antd",
-        "libraryDirectory": "es",
-        "style": "index.css"
+        "libraryName": "antd-mobile",
+        "style": "css"
       }
-    ],
-    [
-      "import",
-      {
-        "libraryName": "@ant-design/icons",
-        "libraryDirectory": "es/icons",
-        "camel2DashComponentName": false
-      },
-      "@ant-design/icons"
     ]
   ]
 }
