--- a/js/mobile/package.json
+++ b/js/mobile/package.json
@@ -3,21 +3,21 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_OPTIONS=\"-r esm\" node server.js",
-    "build": "cross-env NODE_OPTIONS=\"-r esm\" next build",
-    "analyze": "cross-env-shell NODE_OPTIONS=\"-r esm\" ANALYZE=true next build",
+    "dev": "node server.js",
+    "build": "next build",
     "start": "cross-env NODE_ENV=production node server.js",
     "test": "jest --watch",
     "test:ci": "jest --ci"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.1.0",
-    "antd": "^4.2.0",
+    "@zeit/next-css": "^1.0.1",
+    "antd-mobile": "^2.3.2",
+    "babel-plugin-import": "^1.13.0",
     "date-fns": "^2.13.0",
-    "dayjs": "^1.8.26",
     "express": "^4.17.1",
     "next": "latest",
     "nprogress": "^0.2.0",
+    "null-loader": "^4.0.0",
     "qasir": "^0.2.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -27,19 +27,15 @@
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^9.3.6",
     "@testing-library/jest-dom": "^5.1.0",
     "@testing-library/react": "^9.4.0",
     "babel-jest": "^25.1.0",
-    "babel-plugin-import": "^1.13.0",
     "babel-plugin-inline-react-svg": "^1.1.1",
     "babel-plugin-styled-components": "^1.10.7",
     "body-parser": "^1.19.0",
     "cross-env": "^7.0.2",
-    "esm": "^3.2.25",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^25.1.0",
-    "postcss-preset-env": "^6.7.0",
     "react-test-renderer": "^16.12.0",
     "redux-devtools-extension": "^2.13.8"
   }
