--- a/js/mobile/package.json
+++ b/js/mobile/package.json
@@ -27,6 +27,7 @@
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^9.4.1",
     "@testing-library/jest-dom": "^5.1.0",
     "@testing-library/react": "^9.4.0",
     "babel-jest": "^25.1.0",
