--- a/js/mobile/package.json
+++ b/js/mobile/package.json
@@ -24,7 +24,8 @@
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "swr": "^0.2.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^9.4.1",
